overflow wrap fix

--- a/frontend/src/components/SinglePost/SinglePost.css
+++ b/frontend/src/components/SinglePost/SinglePost.css
@@ -14,6 +14,7 @@
     background-color: lightgray;
     border-radius: 15px;
     padding: 10px;
+    overflow-wrap: break-word;
 }
 
 .single-post-btn{
@@ -33,6 +34,7 @@
     justify-content: center;
     align-items: center;
     min-width: 20%;
+    overflow-wrap: break-word;
 }
 
 .single-post-comment{
